[project]
name = "web-analytics-ga4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-storage-file-datalake>=12.20.0",
    "google-analytics-data>=0.18.19",
    "ipykernel>=6.29.5",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
]
